--- a/src/components/editor/aq-editor-home.html
+++ b/src/components/editor/aq-editor-home.html
@@ -2,6 +2,8 @@
 <link rel='import' href='../../../bower_components/paper-checkbox/paper-checkbox.html'>
 <link rel='import' href='../../../bower_components/iron-flex-layout/iron-flex-layout-classes.html'>
 <link rel='import' href='../../../bower_components/iron-collapse/iron-collapse.html'>
+
+<link rel='import' href='../../../bower_components/iron-media-query/iron-media-query.html'>
 <link rel='import' href='../../../bower_components/iron-ajax/iron-ajax.html'>
 <link rel='import' href='./aq-editor-home-elementmenu.html'>
 <link rel='import' href='./aq-editor-home-menu.html'>
@@ -43,23 +45,36 @@
         @apply(--layout-horizontal);
       }
 
-      :host([narrow-viewport]) .header {
+      :host([narrow-viewport]) .header{
+        @apply(--layout-horizontal);
+      }
+
+      :host([narrow-viewport]) .hea {
         @apply(--layout-vertical);
       }
 
+
+      :host([narrow-viewport]) .a,
+      :host([narrow-viewport]) .backtest {
+        @apply(--layout-horizontal);
+      }
+
       .name {
-        width:300px;
+        --min-width:220px;
+        width:32%;
         font-weight: bold;
         margin-right: 30px;
       }
 
       .description {
-      	width: 350px;
+      	width:32%;
+      	--min-width: 250px;
       	margin-right: 30px;
+      	padding-left: 30px;
       }
 
       .backtest {
-      	--width: 350px;
+      	--width: 250px;
       	--min-width: 350px;
       }
 
@@ -92,10 +107,12 @@
     </style>
 
 	<template>
+		<!--iron-media-query query="(max-width: 640px)" query-matches="{{narrowViewport}}"></iron-media-query-->
+
  		<div id='container'>
 	  		<aq-editor-home-menu active-delete="[[hasCheckedStrategies(checkedCount)]]"></aq-editor-home-menu>
 
-		    <div class="header flex" on-mouseover='_mouseOver' on-mouseout='_mouseLeave'>
+		    <div class="header" on-mouseover='_mouseOver' on-mouseout='_mouseLeave'>
 		      <div class="name">Name<span class="narrow">/Description</span></div>
 		      <div class="description">Description</div>
 		      <div class="backtest">#Backtests</div>
@@ -114,7 +131,7 @@
 		    
 	    	<template is="dom-repeat" items="{{strategies}}" id='strategyList'>
 	    		<aq-editor-home-strategy-item strategy-name = "[[item.name]]"
-	    									num-backtest = "[[item.backtests.length]]"
+	    									num-backtest = "5[[item.backtests.length]]"
 	    									strategy-desc = "[[item.description]]"
 											strategy-id = "[[item._id]]"
 	    									>
@@ -146,7 +163,6 @@
 		properties: {
 			strategies: {
 				type: Array,
-				//observer: '_strategiesChanged'
 			},
 			
 			color: { type: String },
@@ -315,7 +331,7 @@
         		}
         	}
 
-        	this.router.go('/dashboard/analyze/a' + strategyId);
+        	this.router.go('/dashboard/analyze/' + strategyId);
         },
 
         goToClone(e) {
